fixed the container wrap and added the a tags to the footer

--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -23,6 +23,16 @@ button {
   width: 100%;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
 .header {
   display: flex;
   border-width: 2px;
